--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
 My collection of resources about german language or german speaking contries.
 
 ## In Russian  
-[Telegram Channels](ru/telegram-collection.md)
+[Telegram Channels](https://github.com/korotko-de/dach-collection/blob/main/ru/telegram-collection.md)
